--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,11 +15,19 @@ import "../styles/global.css"
 	</body>
 </html>
 
-<style>
+<style is:global>
 	html,
 	body {
 		margin: 0;
 		width: 100%;
 		height: 100%;
 	}
+
+	:root {
+      --primary: #402eff;
+      --secondary: #f8f9ff;
+      --white: #ffffff;
+      --dark: #21243d;
+      --light: #8695a4;
+    }
 </style>
