--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,33 +1,34 @@
 ---
-import "../styles/global.css"
+import "../styles/global.css";
 ---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro Basics</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
 
 <style is:global>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
 
-	:root {
-      --primary: #402eff;
-      --secondary: #f8f9ff;
-      --white: #ffffff;
-      --dark: #21243d;
-      --light: #8695a4;
-    }
+  :root {
+    --primary: #402eff;
+    --secondary: #f8f9ff;
+    --white: #ffffff;
+    --dark: #21243d;
+    --light: #8695a4;
+  }
 </style>
