--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,10 @@
 import Welcome from "../components/Welcome.astro";
 import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
+import MyProjectsSection from "../components/MyProjectsSection.astro";
 ---
 
 <Layout>
   <Header />
+  <MyProjectsSection />
 </Layout>
