--- a/src/components/MyProjectsSection.astro
+++ b/src/components/MyProjectsSection.astro
@@ -1,38 +1,11 @@
 ---
 import Section from "./Section.astro";
 import SectionHeader from "./SectionHeader.astro";
+import { getCollection } from "astro:content";
+
 const heading = "My Projects";
 const cta = { text: "View All", href: "/projects" };
-
-const projects = [
-  {
-    title: "E-commerce Dashbord",
-    slug: "project-1",
-    description:
-      "A fast, scalable admin panel for managing products, orders, and sales analytics. Built with React, Next.js, Firebase, and TailwindCSS.",
-    image: "/images/projects/project-1.png",
-    githubURL: "https://github.com/jamesqquick",
-    liveSiteURL: "https://jamesqquick.com",
-  },
-  {
-    title: "SaaS Landing Page",
-    slug: "project-2",
-    description:
-      "A redesign of ABC’s landing page, improving UI/UX, conversion rates, and performance. Built with Next.js, TailwindCSS, and Framer Motion.",
-    image: "/images/projects/project-2.png",
-    githubURL: "https://github.com/jamesqquick",
-    liveSiteURL: "https://jamesqquick.com",
-  },
-  {
-    title: "DevTools Chrome Extension",
-    slug: "project-3",
-    description:
-      "A Chrome DevTools extension for monitoring API requests in real-time. It provides live request logging and response analysis for developers.",
-    image: "/images/projects/project-3.png",
-    githubURL: "https://github.com/jamesqquick",
-    liveSiteURL: "https://jamesqquick.com",
-  },
-];
+const projects = await getCollection("project");
 ---
 
 <Section dark={true}>
@@ -41,9 +14,9 @@ const projects = [
     {
       projects.map((project) => (
         <div class="card">
-          <img src={project.image} />
+          <img src={project.data.image} />
           <h3>
-            <a href={project.liveSiteURL}>{project.title}</a>
+            <a href={project.data.liveSiteURL}>{project.data.title}</a>
           </h3>
         </div>
       ))
