--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import "../styles/global.css";
+import NavBar from "../components/NavBar.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -12,7 +14,9 @@ import "../styles/global.css";
     <title>Astro Basics</title>
   </head>
   <body>
+    <NavBar />
     <slot />
+    <Footer />
   </body>
 </html>
 
