fix: correct typo in CSS property for vertical separator

--- a/src/components/BlogSection.astro
+++ b/src/components/BlogSection.astro
@@ -78,7 +78,7 @@ const posts = await getCollection("blog");
 
           .vertical-separator {
             height: 0;
-            dispaly: none;
+            display: none;
           }
         }
       }
