--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,20 @@
 ---
-import BlogSection from "../components/BlogSection.astro";
+import { getCollection } from 'astro:content';
+import Section from '../components/Section.astro';
+import Layout from "../layouts/Layout.astro";
+import HorizontalSeparator from '../components/HorizontalSeparator.astro';
+import BlogCard from '../components/BlogCard.astro';
+
+const posts = await getCollection('blog');
+const heading = 'Blog';
 ---
 
-<BlogSection />
+<Layout>
+  <Section>
+    <h1>{heading}</h1>
+    {posts.map(post => (
+      <BlogCard post={post}/>
+      <HorizontalSeparator/>
+    ))}
+  </Section>
+</Layout>
