--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -2,6 +2,7 @@
 import { getCollection, render, type CollectionEntry } from "astro:content";
 import Layout from "../../layouts/Layout.astro";
 import Section from "../../components/Section.astro";
+import Prose from "../../components/Prose.astro";
 
 export async function getStaticPaths() {
   const posts = await getCollection("blog");
@@ -25,7 +26,9 @@ const { Content } = await render(post);
       <img src={post.data.image} alt={post.data.title} class="post-image" />
       <h1 class="post-title">{post.data.title}</h1>
       <p class="post-date">{post.data.date}</p>
-      <Content />
+      <Prose>
+        <Content />
+      </Prose>
     </div>
   </Section>
 </Layout>
